# dynamic_resume

./: .gitignore  README.md  models.py  pyproject.toml
src/dynamic_resume/: __init__.py  api.py  config.py
src/dynamic_resume/models/: education.py  experience.py  resume.py
src/dynamic_resume/templates/: example_input.yaml  restaurant_resume.j2  swe_resume.j2
src/dynamic_resume/utils/: build_resume.py  clean_text.py  escape_string.py  get_resume_data.py  prettify.py  render_to_text.py  tex_to_pdf.py
