[project]
name = "dynamic-resume"
version = "0.1.0"
description = "Dynamic Resume Generator (Jinja2 + Pydantic)"
authors = [
    {name = "D. Zachary Wheeler"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
packages = [{ include = "dynamic_resume", from = "src" }]
dependencies = ["pydantic>=2.12.5","Jinja2>=3.1.6","python-dotenv>=1.2.1","PyYAML>=6.0.3"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

